--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,4 @@
-Flask==1.1.1
-Jinja2==2.11.1
-Werkzeug==1.0.0
-flask_cors==3.0.8
-SQLAlchemy==1.3.16
-Flask-Login==0.5.0
-Flask-SQLAlchemy==2.4.1
-Flask-WTF==0.14.3
-marshmallow==3.5.1
-marshmallow-sqlalchemy==0.22.3
-flask-marshmallow==0.11.0
-apscheduler==2.1.2
-telepot==12.7cffi==1.14.2
+cffi==1.14.2
 click==7.1.2
 cryptography==2.9.2
 Flask==1.1.2
