--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ jwt==1.0.0
 MarkupSafe==1.1.1
 marshmallow==3.7.1
 pycparser==2.20
+pyodbc==4.0.30
 six==1.15.0
 SQLAlchemy==1.3.19
 Werkzeug==1.0.1
