--- a/requirements.txt
+++ b/requirements.txt
@@ -9,10 +9,10 @@ Flask-SQLAlchemy==2.4.4
 Flask-WTF==0.14.3
 itsdangerous==1.1.0
 Jinja2==2.11.2
-jwt==1.0.0
 MarkupSafe==1.1.1
 marshmallow==3.7.1
 pycparser==2.20
+PyJWT==1.7.1
 pyodbc==4.0.30
 six==1.15.0
 SQLAlchemy==1.3.19
