--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "Python: Arquivo Atual",
             "type": "python",
             "request": "launch",
-            "program": "${workspaceFolder}\\run.py",
+            "program": "${workspaceFolder}\\run2.py",
             "console": "integratedTerminal",
             "args" : ["runserver"]
         }
