--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ pycparser==2.20
 PyJWT==1.7.1
 python-dateutil==2.8.1
 python-editor==1.0.4
+pyodbc==4.0.30
 six==1.15.0
 SQLAlchemy==1.3.19
 Werkzeug==1.0.1
