--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
 alembic==1.4.2
-cffi==1.14.2
 click==7.1.2
-cryptography==2.9.2
 Flask==1.1.2
 Flask-Cors==3.0.9
 Flask-Login==0.5.0
@@ -15,11 +13,12 @@ Jinja2==2.11.2
 Mako==1.1.3
 MarkupSafe==1.1.1
 marshmallow==3.7.1
+psycopg2==2.9.6
 pycparser==2.20
 PyJWT==1.7.1
+#pyodbc==4.0.39
 python-dateutil==2.8.1
 python-editor==1.0.4
-pyodbc==4.0.30
 six==1.15.0
 SQLAlchemy==1.3.19
 Werkzeug==1.0.1
